<resources>
    <string name="action_expired">ACTION_EXPIRED</string>
    <string name="action_record_audio_permission">ACTION_RECORD_AUDIO_PERMISSION</string>
    <string name="btn_id_default_keyboard">BTN_DEFAULT_KEYBOARD</string>
    <string name="btn_id_enable">BTN_ENABLED</string>
    <string name="default_swipe_sensitivity">50</string>
    <string name="pref_app_version_key">APP_VERSION</string>
    <string name="pref_auto_caps_default">true</string>
    <string name="pref_auto_caps_key">AUTO_CAPS</string>
    <string name="pref_auto_match_keyboard_default">true</string>
    <string name="pref_auto_match_keyboard_key">Auto_MATCH_KEYBOARD</string>
    <string name="pref_auto_rotate_keyboard_default">false</string>
    <string name="pref_auto_rotate_keyboard_key">Auto_ROTATE_KEYBOARD</string>
    <string name="pref_braille_computer_table_default">en-US-comp8</string>
    <string name="pref_braille_computer_table_key">BRAILLE_TABLE_0</string>
    <string name="pref_braille_literary_table_default">en-UEB-g1</string>
    <string name="pref_braille_literary_table_key">BRAILLE_TABLE_1</string>
    <string name="pref_braille_table_auto">auto</string>
    <string name="pref_braille_type_default">0</string>
    <string name="pref_braille_type_key">BRAILLE_GRADE_KEY</string>
    <string name="pref_category_braille_key">BRAILLE_CATEGORY_KEY</string>
    <string name="pref_category_feedback_key">KEYBOARD_FEEDBACK_Category</string>
    <string name="pref_category_keyboard_key">KEYBOARD_CATEGORY</string>
    <string name="pref_category_misc_key">MISC</string>
    <string name="pref_default_keyboard_default">0</string>
    <string name="pref_default_keyboard_key">DEFAULT_KEYBOARD</string>
    <string name="pref_double_space_period_default">true</string>
    <string name="pref_double_space_period_key">DOUBLE_SPACE_PERIOD</string>
    <string name="pref_echo_feedback_key">KEYBOARD_ECHO</string>
    <string name="pref_echo_misspellings_default">true</string>
    <string name="pref_echo_misspellings_key">ECHO_MISSPELLING</string>
    <string name="pref_echo_passwords_default">false</string>
    <string name="pref_echo_passwords_key">PASSWORD_ECHO</string>
    <string name="pref_has_asked_record_audio_key">RECORD_AUDIO</string>
    <string name="pref_keyboard_feedback_key">KEYBOARD_FEEDBACK</string>
    <string name="pref_keyboard_invert_default">false</string>
    <string name="pref_keyboard_invert_key">KEYBOARD_INVERT</string>
    <string name="pref_keyboard_save_horizontal_landscape_invert_key">KEYBOARD_SAVE_HORIZONTAL_LANDSCAPE_INVERT</string>
    <string name="pref_keyboard_save_horizontal_landscape_key">KEYBOARD_SAVE_HORIZONTAL_LANDSCAPE</string>
    <string name="pref_keyboard_save_horizontal_portrait_invert_key">KEYBOARD_SAVE_HORIZONTAL_PORTRAIT_INVERT</string>
    <string name="pref_keyboard_save_horizontal_portrait_key">KEYBOARD_SAVE_HORIZONTAL_PORTRAIT</string>
    <string name="pref_keyboard_save_vertical_landscape_invert_key">KEYBOARD_SAVE_VERTICAL_LANDSCAPE_INVERT</string>
    <string name="pref_keyboard_save_vertical_landscape_key">KEYBOARD_SAVE_VERTICAL_LANDSCAPE</string>
    <string name="pref_keyboard_save_vertical_portrait_invert_key">KEYBOARD_SAVE_VERTICAL_PORTRAIT_INVERT</string>
    <string name="pref_keyboard_save_vertical_portrait_key">KEYBOARD_SAVE_VERTICAL_PORTRAIT</string>
    <string name="pref_keyboard_style_key">KEYBOARD_STYLE</string>
    <string name="pref_keyboard_style_normal_value">0</string>
    <string name="pref_keyboard_style_slate_value">1</string>
    <string name="pref_keyboard_style_top_bottom_value">2</string>
    <string name="pref_privacy_default">false</string>
    <string name="pref_privacy_key">PRIVACY</string>
    <string name="pref_show_circles_default">true</string>
    <string name="pref_show_circles_key">SHOW_CIRCLE_KEY</string>
    <string name="pref_swipe_sensitivity_key">SWIPE_SENSITIVITY_KEY</string>
    <string name="pref_switch_tables_key">SWITCH_TABLES</string>
    <string name="pref_text_to_speech_engine_key">TEXT_TO_SPEECH</string>
    <string name="pref_trial_end_time_key">TRIAL_END_TIME</string>
    <string name="pref_two_hand_calibration_default">true</string>
    <string name="pref_two_hand_calibration_key">TWO_HAND_CALIBRATE</string>
    <string name="pref_use_eight_dots_default">false</string>
    <string name="pref_use_eight_dots_key">USE_EIGHT_DOT</string>
    <string name="pref_vibrate_on_exit_default">true</string>
    <string name="pref_vibrate_on_exit_key">VIBRATE_EXIT</string>
    <string name="pref_voice_shortcut_default">true</string>
    <string name="pref_voice_shortcut_key">VOICE_INPUT_SHORTCUT</string>
    <string name="require_record_audio_now">REQUIRE_RECORD_AUDIO</string>
    <string name="txt_id_practice">TXT_PRACTICE</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Soft Braille Keyboard</string>
    <string name="auto_caps_disabled">No auto-capitalisation</string>
    <string name="auto_caps_enabled">Auto-capitalisation</string>
    <string name="blank">Blank</string>
    <string name="braille_ime">Soft Braille Keyboard</string>
    <string name="button_choose_default_keyboard">Set Soft Braille Keyboard as the default keyboard</string>
    <string name="button_keyboard_settings">Enable Soft Braille Keyboard</string>
    <string name="button_more_info">Read the quick start guide</string>
    <string name="capital">Capital %s</string>
    <string name="closing_keyboard">Closing keyboard</string>
    <string name="copied">Copied</string>
    <string name="copy_error">Error copying</string>
    <string name="cut_error">Error cutting</string>
    <string name="deleted">Deleted %s</string>
    <string name="delete_selection">Delete selection</string>
    <string name="end_of_text">End of text</string>
    <string name="expand_keyboard_talkback">Double tap here to expand the keyboard</string>
    <string name="expand_keyboard">Tap here to expand the keyboard</string>
    <string name="grade_computer">Computer Braille</string>
    <string name="grade">Default Braille grade</string>
    <string name="grade_literary">Literary Braille</string>
    <string name="grade_table">Grade %s</string>
    <string name="hide_keyboard">Hiding the keyboard.</string>
    <string name="high">High</string>
    <string name="info_url">https://docs.google.com/document/d/1OX6yFjkK61VfROdU9uQNxjEZ_QNWxiMnUY_1ECnIyRQ/pub</string>
    <string name="keyboard_auto">Automatic</string>
    <string name="keyboard_echo_all">Both characters and words</string>
    <string name="keyboard_echo_character">Characters</string>
    <string name="keyboard_echo_none">None</string>
    <string name="keyboard_echo_word">Words</string>
    <string name="keyboard_error">Couldn\'t set the keyboard.</string>
    <string name="keyboard_feedback_all">Both sound and vibration</string>
    <string name="keyboard_feedback_none">None</string>
    <string name="keyboard_feedback_sound">Sound only</string>
    <string name="keyboard_feedback_vibrate">Vibrate only</string>
    <string name="keyboard_full_screen">Keyboard expanded</string>
    <string name="keyboard_horizontal">Horizontal</string>
    <string name="keyboard_next_three">Please hold your other three fingers on the screen now.</string>
    <string name="keyboard_not_set">Please place all 6 fingers on the screen to set the Braille keyboard</string>
    <string name="pref_auto_caps_summary">Capitalise the first word of each sentence.</string>
    <string name="pref_auto_caps_title">Auto-capitalisation</string>
    <string name="pref_auto_match_keyboard_summary">When enabled the keyboard is selected based on the position of your fingers when you manually calibrate the keyboard.</string>
    <string name="pref_auto_match_keyboard_title">Automatically select keyboard layout based on the position of your fingers</string>
    <string name="pref_braille_grade_summary">Sets the preferred Braille grade.</string>
    <string name="pref_category_braille_title">Braille Table Settings</string>
    <string name="pref_category_feedback_title">Keyboard Feedback Settings</string>
    <string name="pref_category_keyboard_title">Keyboard Settings</string>
    <string name="pref_category_misc_title">Miscellaneous Settings</string>
    <string name="pref_default_computer_braille_table_summary"></string>
    <string name="pref_default_computer_braille_table_title">Computer Braille table</string>
    <string name="pref_default_keyboard_summary">Choose the keyboard layout that is displayed by default.</string>
    <string name="pref_default_keyboard_title">Default Keyboard Layout</string>
    <string name="pref_default_literary_braille_table_summary"></string>
    <string name="pref_default_literary_braille_table_title">Literary Braille table</string>
    <string name="pref_double_space_period_summary">Double swiping space inserts a period followed by a space.</string>
    <string name="pref_double_space_period_title">Double-space period</string>
    <string name="pref_echo_feedback_summary">Choose the type of keyboard echo.</string>
    <string name="pref_echo_feedback_title">Keyboard Echo</string>
    <string name="pref_echo_misspellings_summary">When enabled misspellings are announced when a space is typed</string>
    <string name="pref_echo_misspellings_title">Echo misspellings as you type</string>
    <string name="pref_echo_passwords_summary">When enabled the keyboard will speak during password input.</string>
    <string name="pref_keyboard_feedback_summary">Choose the type of haptic and sound keyboard feedback.</string>
    <string name="pref_keyboard_feedback_title">Keyboard Feedback</string>
    <string name="pref_keyboard_invert_summary">When the keyboard is not rotating with the phone use this setting to flip the orientation of the keyboard 180 degrees</string>
    <string name="pref_keyboard_invert_title">Invert keyboard</string>
    <string name="pref_keyboard_style_summary">Configure the layout of the dots on the keyboard.</string>
    <string name="pref_keyboard_style_title">Keyboard style</string>
    <string name="pref_privacy_summary">When enabled blacks out the screen as you type for privacy.</string>
    <string name="pref_privacy_title">Privacy screen</string>
    <string name="pref_show_circles_summary">When enabled small circles are displayed to indicate the on screen position of each Braille dot</string>
    <string name="pref_show_circles_title">Show circles on screen?</string>
    <string name="pref_swipe_sensitivity_summary">Choose the sensitivity of swipe gestures.</string>
    <string name="pref_swipe_sensitivity_title">Swipe sensitivity</string>
    <string name="pref_switch_tables_summary">Select certain languages that can be switched between on the fly while typing.</string>
    <string name="pref_switch_tables_title">Enable Braille tables for on the fly switching.</string>
    <string name="pref_text_to_speech_engine_title">Text To Speech Engine</string>
    <string name="pref_text_to_speech_title">Text To Speech Settings</string>
    <string name="pref_use_eight_dots_summary">When enabled shows dots 7 and 8.</string>
    <string name="pref_use_eight_dots_title">Show eight dot keyboard</string>
    <string name="pref_vibrate_on_exit_title">Vibrate when keyboard closes</string>
    <string name="pref_voice_shortcut_summary">When enabled double tap and hold to start voice dictation while talkback is enabled.</string>
    <string name="pref_voice_shortcut_title">Voice input shortcut</string>
    <string name="rotate_keyboard">Rotate keyboard with device</string>
    <string name="rotate_summary">When enabled the keyboard will be oriented according to the orientation of the device.</string>
    <string name="settings_name">Soft Braille Keyboard Settings</string>
    <string name="speak_passwords">Speak passwords</string>
    <string name="try_box">Try typing with the keyboard here.</string>
</resources>