<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="@string/settings_name">
    <PreferenceScreen
         android:key="@string/pref_category_keyboard_key"
         android:title="@string/pref_category_keyboard_title" >
         <ListPreference
             android:key="@string/pref_default_keyboard_key"
             android:title="@string/pref_default_keyboard_title"
             android:summary="@string/pref_default_keyboard_summary"
             android:entries="@array/default_keyboard_entries"
             android:entryValues="@array/default_keyboard_entry_values"
             android:defaultValue="@string/pref_default_keyboard_default" />
         <ListPreference
             android:key="@string/pref_keyboard_style_key"
             android:title="@string/pref_keyboard_style_title"
             android:summary="@string/pref_keyboard_style_summary"
             android:entries="@array/keyboard_style_entries"
             android:entryValues="@array/keyboard_style_entry_values"
             android:defaultValue="@string/pref_keyboard_style_normal_value" />
         <CheckBoxPreference
         android:key="@string/pref_auto_match_keyboard_key"
         android:title="@string/pref_auto_match_keyboard_title"
         android:summary="@string/pref_auto_match_keyboard_summary"
         android:defaultValue="@string/pref_auto_match_keyboard_default" />
         <CheckBoxPreference
         android:key="@string/pref_auto_rotate_keyboard_key"
         android:title="@string/rotate_keyboard"
         android:summary="@string/rotate_summary"
         android:defaultValue="@string/pref_auto_rotate_keyboard_default" />
         <CheckBoxPreference
         android:key="@string/pref_keyboard_invert_key"
         android:title="@string/pref_keyboard_invert_title"
         android:summary="@string/pref_keyboard_invert_summary"
         android:defaultValue="@string/pref_keyboard_invert_default" />
         <CheckBoxPreference
         android:key="@string/pref_use_eight_dots_key"
         android:title="@string/pref_use_eight_dots_title"
         android:summary="@string/pref_use_eight_dots_summary"
         android:defaultValue="@string/pref_use_eight_dots_default" />
         <CheckBoxPreference
         android:key="@string/pref_show_circles_key"
         android:title="@string/pref_show_circles_title"
         android:summary="@string/pref_show_circles_summary"
         android:defaultValue="@string/pref_show_circles_default" />
         <ListPreference
             android:key="@string/pref_swipe_sensitivity_key"
             android:title="@string/pref_swipe_sensitivity_title"
             android:summary="@string/pref_swipe_sensitivity_summary"
             android:entries="@array/swipe_sensitivity_entries"
             android:entryValues="@array/swipe_sensitivity_values"
             android:defaultValue="@string/default_swipe_sensitivity" />
         </PreferenceScreen>
         <PreferenceScreen
         android:key="@string/pref_category_braille_key"
         android:title="@string/pref_category_braille_title" >
         <ListPreference
             android:key="@string/pref_braille_type_key"
             android:title="@string/grade"
             android:summary="@string/pref_braille_grade_summary"
             android:entries="@array/braille_types"
             android:entryValues="@array/braille_types_values"
             android:defaultValue="@string/pref_braille_type_default" />
         <ListPreference
             android:key="@string/pref_braille_computer_table_key"
             android:title="@string/pref_default_computer_braille_table_title"
             android:summary="@string/pref_default_computer_braille_table_summary"
             android:defaultValue="@string/pref_braille_table_auto" />
         <ListPreference
             android:key="@string/pref_braille_literary_table_key"
             android:title="@string/pref_default_literary_braille_table_title"
             android:summary="@string/pref_default_literary_braille_table_summary"
             android:defaultValue="@string/pref_braille_table_auto" />
         <MultiSelectListPreference
              android:dialogTitle="@string/pref_switch_tables_title"
              android:key="@string/pref_switch_tables_key"
              android:summary="@string/pref_switch_tables_summary"        
              android:title="@string/pref_switch_tables_title"
              android:defaultValue="@array/empty_array"/>
         </PreferenceScreen>
         <PreferenceScreen
         android:key="@string/pref_category_feedback_key"
         android:title="@string/pref_category_feedback_title" >
         <ListPreference
             android:key="@string/pref_echo_feedback_key"
             android:title="@string/pref_echo_feedback_title"
             android:summary="@string/pref_echo_feedback_summary" 
             android:defaultValue="1" />
         <ListPreference
             android:key="@string/pref_keyboard_feedback_key"
             android:title="@string/pref_keyboard_feedback_title"
             android:summary="@string/pref_keyboard_feedback_summary"
             android:defaultValue="3" />
         <CheckBoxPreference
         android:key="@string/pref_echo_passwords_key"
         android:title="@string/speak_passwords"
         android:summary="@string/pref_echo_passwords_summary"
         android:defaultValue="@string/pref_echo_passwords_default" />
         <CheckBoxPreference
         android:key="@string/pref_echo_misspellings_key"
         android:title="@string/pref_echo_misspellings_title"
         android:summary="@string/pref_echo_misspellings_summary"
         android:defaultValue="@string/pref_echo_misspellings_default" />
         </PreferenceScreen>
         <PreferenceScreen
             android:title="@string/pref_text_to_speech_title" >
         <ListPreference
             android:key="@string/pref_text_to_speech_engine_key"
             android:title="@string/pref_text_to_speech_engine_title" />
         </PreferenceScreen>
         <PreferenceScreen
         android:key="@string/pref_category_misc_key"
         android:title="@string/pref_category_misc_title" >
         <CheckBoxPreference
         android:key="@string/pref_auto_caps_key"
         android:title="@string/pref_auto_caps_title"
         android:summary="@string/pref_auto_caps_summary"
         android:defaultValue="@string/pref_auto_caps_default" />
         <CheckBoxPreference
         android:key="@string/pref_double_space_period_key"
         android:title="@string/pref_double_space_period_title"
         android:summary="@string/pref_double_space_period_summary"
         android:defaultValue="@string/pref_double_space_period_default" />
         <CheckBoxPreference
         android:key="@string/pref_privacy_key"
         android:title="@string/pref_privacy_title"
         android:summary="@string/pref_privacy_summary"
         android:defaultValue="@string/pref_privacy_default" />
         <CheckBoxPreference
         android:key="@string/pref_voice_shortcut_key"
         android:title="@string/pref_voice_shortcut_title"
         android:summary="@string/pref_voice_shortcut_summary"
         android:defaultValue="@string/pref_voice_shortcut_default" />
         <CheckBoxPreference
         android:key="@string/pref_vibrate_on_exit_key"
         android:title="@string/pref_vibrate_on_exit_title"
         android:defaultValue="@string/pref_vibrate_on_exit_default" />
         </PreferenceScreen>
         <Preference
         android:key="@string/pref_app_version_key" />
</PreferenceScreen>
