<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:orientation="vertical" >
    <Button style="@android:style/TextAppearance.Large"
        android:id="@string/btn_id_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_keyboard_settings"
        android:onClick="onKeyboardSettings" />
    <Button style="@android:style/TextAppearance.Large" 
        android:id="@string/btn_id_default_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_choose_default_keyboard"
        android:onClick="onDefaultInputMethod" />
    <EditText
        android:id="@string/txt_id_practice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textMultiLine"
        android:hint="@string/try_box" />
    <Button style="@android:style/TextAppearance.Large" 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:text="@string/button_more_info"
        android:onClick="onURL" />
</LinearLayout>
